# mlgrid

./: .gitignore
ml_daemon/: .gitignore  Cargo.toml
ml_daemon/src/: main.rs
mlapp/: package-lock.json  package.json
mlapp/src/: App.js  DrawComponent.js  GlobalStyles.css  GridCanvas.js  GridPage.js  LabeledOutputComponent.js  ModelSelector.js  NewModelPage.js  NumberUtils.js  index.js
mlapp/src/REST/: MLDaemonRESTClient.js  RESTClient.js
mlapp/src/UIComponents/: ChoiceBox.js
mlapp/src/UIComponents/css/: ChoiceBox.css
mlapp/src/css/: Grid.css  LabeledOutputComponent.css
mldaemon/: Cargo.toml  binary_to_int_example.gnm  test2.nn  xor_example.gnm
mldaemon/src/: instance_manager.rs  main.rs  mldaemon_model.rs  mldaemon_utils.rs  model_manager.rs  test_data.rs
mldriver/: Cargo.toml
mldriver/src/: main.rs
