[package]
name = "mldaemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/graymat"
]

[dependencies]
graymat = { path = "crates/graymat" }
ndarray = "0.15.6"
rand = "0.8.5"
actix-web = "4.2.1"
chrono = "0.4.23"
serde = { version = "1.0.149", features = ["derive"] }

